# napari-remote-interaction

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/napari_remote_interaction/: __init__.py  _connection.py  _dock_widget.py
src/napari_remote_interaction/_tests/: test_dock_widget.py
src/napari_remote_interaction/backend/: __init__.py  _serialization.py  base.py  zmq.py
