[metadata]
name = napari-remote-interaction

author = Burkhard Höckendorf
author_email = burkhard.hoeckendorf@pm.me
url = https://github.com/bhoeckendorf/napari-remote-interaction
license = Apache-2.0
description = Remotely interacts with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
project_urls =
    Bug Tracker = https://github.com/bhoeckendorf/napari-remote-interaction/issues
    Documentation = https://github.com/bhoeckendorf/napari-remote-interaction#README.md
    Source Code = https://github.com/bhoeckendorf/napari-remote-interaction
    User Support = https://github.com/bhoeckendorf/napari-remote-interaction/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
install_requires =
    blosc
    napari-plugin-engine>=0.1.4
    napari-tools-menu
    numpy
    pyzmq
    qasync

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-remote-interaction = napari_remote_interaction
